[project]
name = "course-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Safonov",email = "denissafonov_85@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.develop.dependencies]
pytest = "^8.4.1"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tools.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

